visual (smaller arrow dimensions): fixed responsivity problems on smaller screens for the arrow redirect to next step

--- a/src/app/modules/shared/components/arrow-redirect/components/arrow-redirect.component.scss
+++ b/src/app/modules/shared/components/arrow-redirect/components/arrow-redirect.component.scss
@@ -10,8 +10,8 @@
 
 .arrow span {
   display: block;
-  width: 35px;
-  height: 35px;
+  width: 32px;
+  height: 32px;
   border-bottom: 5px solid lightgrey;
   border-right: 5px solid lightgrey;
   transform: rotate(45deg);
